# Data-Structures

./: README.md  analisysHash.ipynb  vjuiceTree.ipynb
Analisys/: analisysHash.ipynb  analisysList3.ipynb
Analisys/structures/: unionFind.py
Exercise/: ejer2.py
HashTable/: hash.cpp  unionFind.py
HashTable/bindC++/: HashTable.cpp
HashTable/bindZig/: CMakeLists.txt  wrapper.cpp
Src/HashTable/: hash.py  hash.zig
Src/HashTable/bindC++/: CMakeLists.txt
Src/HashTable/bindZig/: HashTable.zig  MyHashTable.h
Src/HashTable/bindZig/lib/: HashTable.h
Src/Trees/: avl.py  heap.py  heapN.py
Trees/: bst.py
experiment/: parcial2.py
